--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ img {
                 
                 
                   <div class="panel panel-primary">
-  <div class="panel-heading">Links for Donation!</div>
+  <div class="panel-heading">Links for Donation/Social Medias for update!</div>
   <div class="panel-body">
     <a href="https://www.spendenkonto-nothilfe.de/" target="_blank">Spendekont Nothilfe</a>
   </div>
