--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ img {
         
 <!--        http://bootsnipp.com/snippets/featured/share-on-social-networks-->
               
-<img src="http://i.imgur.com/oSziEjg.jpg" alt="Pray for Nepal" class="img-responsive center-block" />
+<img src="http://i.imgur.com/83YLnnq.jpg" alt="Pray for Nepal" class="img-responsive center-block" />
 
 <br><br>
             <div class="container">
