--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
     <head>
     
         <title>Pray for Nepal</title>
+        <link rel="shortcut icon" href="http://www.iconj.com/ico/z/i/zi2lyaylrv.ico" type="image/x-icon" />
+        
                 <script src="https://code.jquery.com/jquery-2.1.3.js"></script>
 
     <!-- Latest compiled and minified CSS -->
